--- a/style.css
+++ b/style.css
@@ -617,6 +617,21 @@ textarea {
 	width: 26%;
 }
 
+/* Sidebar Left Layout */
+@media only screen and (min-width: 60em) {
+	
+	.sidebar-left .content-area {
+		float: right;
+		padding-right: 0;
+		padding-left: 1.8em;
+	}
+	
+	.sidebar-left .sidebar {
+		float: left;
+	}
+	
+}
+
 /*--------------------------------------------------------------
 # 9.0 - Header
 --------------------------------------------------------------*/
@@ -1309,10 +1324,6 @@ textarea {
 	background: none;
 }
 
-.widget-category-posts .type-post .entry-title {
-	display: block;
-}
-
 .widget-category-posts .type-post .wp-post-image {
 	margin: 0;
 	max-width: 100%;
@@ -1348,8 +1359,8 @@ textarea {
 }
 
 .widget-category-posts .large-post .entry-title {
-	font-size: 22px;
-	font-size: 1.375rem;
+	font-size: 20px;
+	font-size: 1.25rem;
 }
 
 .widget-category-posts .large-post .wp-post-image {
@@ -1525,10 +1536,11 @@ textarea {
 
 .page-title, 
 .entry-title {
+	display: inline;
 	font-size: 28px;
 	font-size: 1.75rem;
-	padding: 0.1em 0 0;
-	margin: 0 0 0.4em 0;
+	padding: 0 0 0.1em;
+	margin: 0;
 	color: #2299cc;
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;
@@ -1540,7 +1552,6 @@ textarea {
 }
 
 .entry-title {
-	display: inline;
 	border-bottom: 3px solid #2299cc;
 }
 
@@ -1561,10 +1572,21 @@ textarea {
 }
 
 .type-post .wp-post-image {
+	margin-bottom: 0.5em;
+}
+
+.type-post .post-thumbnail-small .wp-post-image {
 	float: left;
 	max-width: 40%;
-	margin: 0.5em 1.8em 0.5em 0;
+	margin: -0.3em 1.8em 0.5em 0;
+	padding: 0.3em 0 0;
 }
+
+.type-post .post-thumbnail-small + .entry-header .entry-title {
+	font-size: 22px;
+	font-size: 1.375rem;
+}
+
 
 /* Page Links | wp_link_pages() */
 .page-links {
@@ -1578,7 +1600,7 @@ textarea {
 	color: #777;
 	font-size: 14px;
 	font-size: 0.875rem;
-	padding: 0 0.2em;
+	margin: 0.7em 0.2em 0;
 }
 
 /* Entry Tags */
